--- a/style.css
+++ b/style.css
@@ -156,13 +156,13 @@ h3 {
     border-radius: 4px;
 }
 
-.btn-group button {
-  background-color: #E4EDF2; /* Green background */
-  border: 1px solid #E4EDF2; /* Green border */
-  color:black; /* White text */
-  padding: 10px 24px; /* Some padding */
-  cursor: pointer; /* Pointer/hand icon */
-  float: left; /* Float the buttons side by side */
+.btn-month {
+  background-color: #E4EDF2; 
+  border: 2px solid #E4EDF2; 
+  color:black; 
+  padding: 10px 24px; 
+  cursor: pointer; 
+  float: left; 
   width: 190px;
   height: 57px;
   font-size: 16px;
@@ -176,16 +176,21 @@ h3 {
 }
 
 .btn-group button:not(:last-child) {
-  border-right: none; /* Prevent double borders */
+  border-right: none; 
 }
 
-.btn-month {
+/* .btn-month {
 background-color: #0A6CBF !important;
 color: white !important;
-}
+} */
 
 /* Add a background color on hover */
-.btn-group button:hover {
+/* .btn-group button:hover {
+  background-color: #0A6CBF;
+  color: white;
+} */
+
+.--selected {
   background-color: #0A6CBF;
   color: white;
 }
@@ -204,11 +209,10 @@ color: white !important;
 } 
 
  table {
-        width: 1360px;
-        border-collapse: collapse;
-        margin: 50px auto 0 auto;
-        border: 1px solid #DFE0E6;
-        
+    width: 1360px;
+    border-collapse: collapse;
+    margin: 50px auto 0 auto;
+    border: 1px solid #DFE0E6;       
 }
 
 .table {
