--- a/style.css
+++ b/style.css
@@ -358,8 +358,13 @@ td {
 }
 
 
- @media screen and (max-width: 800px){
-   .table  thead, .table tr, .table th, .table td{
+ @media screen and (max-width: 768px){
+
+   section {
+     width: 100%;
+   }
+
+   .table, .table  thead, .table tr, .table th, .table td{
      display: block;
      width: 100%;
    }
@@ -368,22 +373,123 @@ td {
      border: none;
    }
 
-   .basics > .btn-bs {
+   .basics > .btn-bs, .free-trail > .btn-hd {
      display: block;
+   }
+  
+   .btn-bs, .btn-hd {
+     margin-left: 98px;
+   }
+
+   .devices {
+     border: 1px solid #DFE0E6;
    }
 
    .features {
-     border: none !important;
-     background-color: none !important;
+    width: 40% !important;
+    display: block;
+    margin-left: 130px;
+    border-left: none;
+    background-color: #fff;
  }
 
-   .center-features {
-    margin-right: 40px;
-    font-size: 24px !important;
-    font-weight: bold;
+ .free-trail h2 {
+   margin-top: 5px;
+   padding: 8px;
+   border-bottom: 1px solid #DFE0E6 ;
+   text-align: center;
  }
-   /* .table, .table tbody, .table tr, .table td {
-     display: block;
-     width: 100%;
-   } */
+ .Basics h2 {
+   margin-top: 5px;
+   padding: 8px;
+   border-bottom: 1px solid #DFE0E6 ;
+   text-align: center;
+ }
+
+ .free-trail{
+   border: 1px solid #02569D;
+   width: 300px;
+   margin-left: 30px;
+   box-shadow: #00000014 1px 4px 20px;
+ }
+ 
+.Basics {
+   border: 1px solid #DFE0E6;
+   width: 300px;
+   margin-left: 30px;
+   box-shadow: #00000014 1px 4px 20px;
+ }
+
+tbody {
+  width: 380px;
+  margin-left: 5px;
+}
+
+.table .head {
+  text-align: left;
+  margin-left: 100px;
+  border: none;
+}
+.table .title {
+  text-align: left;
+  position: relative;
+  border: 1px solid #DFE0E6;
+  background-color: #F1F3F5;
+  margin-top: 20px;
+
+}
+
+.table .check {
+  text-align: center;
+  position: relative;
+}
+
+.table td::before {
+  content: attr(data-label);
+  position: absolute;
+  left: 0;
+  width: 50%;
+  padding-left: 10px;
+  text-align: left;
+  color: #000000;
+  font-size: 16px;
+
+}
+
+.table .btn-hd::before {
+  content: '';
+  position: absolute;
+  left: 0;
+  width: 50%;
+  padding-left: 30px;
+  text-align: center;
+  color: #000000;
+  font-size: 16px;
+
+}
+
+main {
+  width: 380px;
+  display: flex;
+  justify-content: center;
+}
+
+.btn-hd, .button-features {
+  display: none;
+}
+.recommend {
+  position: absolute;
+  top: 119%;
+  left: 36%;
+  max-width: 110px;
+  height: 24px;
+}
+
+  .new-table {
+   border: 1px solid #DFE0E6;
+   width: 100%;
+  }
+
+  
+    
  }
